<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- 全局 -->
    <string name="app_name">mindpin</string>
    <string name="app_version">0.0.9 pre</string>
    <string name="app_version_full">android客户端 0.0.9 pre</string>
    <string name="app_now_loading">正在载入…</string>
    
    <string name="app_method_not_define_exception">功能方法未定义</string>
    <string name="app_intent_connection_exception">网络连接错误</string>
    <string name="app_authenticate_exception">用户身份验证错误</string>
    <string name="app_unknown_exception">程序执行错误</string>
    
    <string name="app_data_syn_fail">数据同步失败</string>
    
    <string name="button_go_back">返回</string>
    
    <!-- 各种dialog -->
    <string name="dialog_close_app_title">关闭mindpin</string>
    <string name="dialog_close_app_text">确定要关闭mindpin么？</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    
    <!-- 关于页面 -->
    <string name="about_title">关于…</string>
    <!-- 登录页面 -->
    <string name="login_email">邮箱</string>
    <string name="login_password">密码</string>
    <string name="login_login">登录</string>
    <string name="login_email_valid_blank">请输入邮箱</string>
    <string name="login_password_valid_blank">请输入密码</string>
    <string name="login_auth_fail">用户邮箱或密码错误</string>
    <string name="login_now_login">正在登录…</string>
    
    <!-- 登录成功后的主页面 -->
    <string name="main_bn_new_feed">创建主题</string>
    <string name="main_bn_camera">拍照</string>
    <string name="main_bn_feeds">浏览主题</string>
    <string name="main_bn_collections">收集册</string>
    <string name="menu_about">关于…</string>
    <string name="menu_account_management">账号管理</string>
    <string name="menu_contacts">人际关系</string>
    <string name="menu_setting">设置</string>
    
    <!-- 新建主题页面 -->
    <string name="new_feed_title_et">主题标题</string>
    <string name="new_feed_content_et">主题内容</string>
    <string name="send_bn">发送</string>
    <string name="album_bn">相册</string>
    <string name="feed_title_valid_blank">请输入主题标题</string>
    <string name="feed_select_collections">选择发送范围</string>
    <string name="feed_valid_blank">主题内容不能为空</string> 
    <!-- 显示照片页面 -->
    <string name="show_capture_image_back">返回</string>
    <!-- 选择收集册页面 -->
    <string name="send_tsina">发送到新浪微博</string>
    <string name="submit_bn">确定</string>
    <string name="cancel_bn">取消</string>
    <string name="new_collection">新建收集册</string>
  	<!-- 收集册主题列表页面 -->
    <string name="menu_delete_collection">删除</string>
    <string name="menu_change_collection_name">改名</string>
    <!-- 设置页面 -->
    <string name="upload_photo_quality">upload_photo_quality</string>
    <!-- 账号管理 -->
    <string name="account_manager_title">账号管理</string>
    <string name="account_edit_button">编辑</string>
    <string name="account_edit_button_close">完成</string>
    <string name="account_delete_button">删除</string>
</resources>
