<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  	xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/body"
>
	
	<RelativeLayout 
		style="@style/new_feed_layout_main"
	>
		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_above="@+id/bottom_bar"
		>
			<EditText
				android:id="@+id/feed_title_et"
				android:singleLine="true"
				android:hint="@string/new_feed_title_et"
				android:layout_alignParentTop="true"
				style="@style/new_feed_layout_inputer"
			/>
			<LinearLayout
				android:id="@+id/feed_captures_parent"
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/feed_title_et"
				android:gravity="center"
			>
				<HorizontalScrollView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
				>
					<LinearLayout
						android:id="@+id/feed_captures"
						android:orientation="horizontal"
					 	android:layout_width="wrap_content"
						android:layout_height="wrap_content"
					></LinearLayout>
				</HorizontalScrollView>
			</LinearLayout>
			<EditText
				android:gravity="top"
				android:layout_below="@+id/feed_captures_parent"
				android:id="@+id/feed_content_et"
				android:hint="@string/new_feed_content_et"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
			/>
		</RelativeLayout>
		
		<LinearLayout
			android:id="@+id/bottom_bar"
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="112dip"
			android:layout_alignParentBottom="true"
			android:background="@drawable/bottom_bar" 
		>
			<Button
				android:text="@string/feed_select_collections"
				android:id="@+id/select_collections_bn"
				android:layout_width="fill_parent"
				android:layout_height="56dip"
			/>
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="56dip"
				android:layout_alignParentBottom="true"
				android:weightSum="10"
				android:background="@drawable/bottom_bar">
				<ImageButton
					android:id="@+id/capture_bn"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:scaleType="centerInside"
					android:layout_weight="1"
					android:adjustViewBounds="true"
					android:src="@drawable/camera"
					android:background="@drawable/capture_bn"
				/>
				<TextView
					android:layout_height="fill_parent"
					android:layout_width="wrap_content"
					android:layout_weight="0.1"
					android:background="@android:color/black" 
				/>
				<Button
					android:id="@+id/album_bn"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_weight="2.2"
					android:text="@string/album_bn"
					android:background="@drawable/album_bn"
				/>
				<TextView
					android:layout_height="fill_parent"
					android:layout_width="wrap_content"
					android:layout_weight="0.1"
					android:background="@android:color/black" 
				/>
				<Button
					android:id="@+id/send_bn"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_weight="6.6"
					android:text="@string/send_bn"
					android:background="@drawable/send_bn"
				/>
			</LinearLayout>
		
		</LinearLayout>
	
	</RelativeLayout>
</LinearLayout>
