<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <CheckBox
    	android:id="@+id/send_tsina_cb"
    	android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:text="@string/send_tsina"
  		android:layout_alignParentTop="true"
    	/>
    <ListView
    	android:id="@+id/select_collection_list"
    	android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/send_tsina_cb"
  		android:layout_above="@+id/bottom_bar"
    ></ListView>
    <LinearLayout 
    	android:id="@+id/bottom_bar"
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
    	android:layout_alignParentBottom="true"
    	android:weightSum="2"
    >
	    <LinearLayout
	         	android:id="@+id/bottom_bar_top"
		    	android:orientation="horizontal"
		    	android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_weight="1"
		  		android:weightSum="5"
	    >
	    	<EditText
	    		android:id="@+id/new_collection_et"
	    		android:layout_weight="4"
	    		android:layout_width="wrap_content"
		  		android:layout_height="wrap_content"
	    	/>
	    	<Button
    		 	android:id="@+id/new_collection_bn"
	    		android:text="新建"
	    		android:layout_width="wrap_content"
	  			android:layout_height="wrap_content"
	  			android:layout_weight="1"
	    	/>
	    </LinearLayout>
	    <LinearLayout
	    	android:id="@+id/bottom_bar_bottom"
	    	android:orientation="horizontal"
	    	android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:layout_weight="1"
	    	android:weightSum="2"
	    >
	    	<Button
	    		android:id="@+id/send_bn"
	    		android:text="@string/send_bn"
	    		android:layout_width="wrap_content"
	  			android:layout_height="wrap_content"
	  			android:layout_weight="1"
	  			android:visibility="gone"
	    	/>
	    	<Button
	    		android:id="@+id/submit_bn"
	    		android:text="@string/submit_bn"
	    		android:layout_width="wrap_content"
	  			android:layout_height="wrap_content"
	  			android:layout_weight="1"
	  			android:visibility="gone"
	    	/>
	    	<Button
	    		android:id="@+id/cancel_bn"
	    		android:text="@string/cancel_bn"
	    		android:layout_width="wrap_content"
	  			android:layout_height="wrap_content"
	  			android:layout_weight="1"
	    	/>
	    </LinearLayout>
    
    
    </LinearLayout>
    
</RelativeLayout>
