<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="42dp"
		android:background="@drawable/title_bar_background_color"
	>
		<TextView
			android:text="@string/app_name"
			android:textSize="18dp"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:gravity="center"
		/>
	</LinearLayout>
	<TableLayout
			android:layout_marginTop="10dip"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
	>
		<TableRow
			android:weightSum="2"
		>
			<LinearLayout
				android:id="@+id/main_bn_new_feed"
				android:clickable="true"
				android:background="@drawable/main_bn_new_feed"
				android:layout_weight="1" 
				android:orientation="vertical">
				<ImageView
					android:src="@drawable/new_feed" 
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:layout_weight="2"
					/>
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:gravity="center"
					android:text="@string/main_bn_new_feed"/>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/main_bn_camera"
				android:clickable="true"
				android:background="@drawable/main_bn_camera"
				android:layout_weight="1" 
				android:orientation="vertical">
				<ImageView 
					android:layout_height="fill_parent" 
					android:layout_width="fill_parent" 
					android:src="@drawable/camera" 
					android:layout_weight="1"></ImageView>
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:gravity="center"
					android:text="@string/main_bn_camera"/>
			</LinearLayout>
		</TableRow>
		<TableRow android:weightSum="2">
			<LinearLayout
				android:id="@+id/main_bn_feeds"
				android:clickable="true"
				android:background="@drawable/main_bn_feeds"
				android:layout_weight="1" 
				android:orientation="vertical">
				<ImageView
					android:src="@drawable/feeds" 
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:layout_weight="2"
					/>
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:gravity="center"
					android:text="@string/main_bn_feeds"/>
			</LinearLayout>
			<LinearLayout
				android:layout_weight="1" 
				android:orientation="vertical">
				</LinearLayout>
		</TableRow>
	</TableLayout>
	
	
	

			
</LinearLayout>
