<?xml version="1.0" encoding="utf-8"?>

<!-- 主界面，包含功能选择 -->

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/body"
>	
	<!-- 顶栏，有头像和名字 -->
	<LinearLayout
		style="@style/title_bar"
	>
		<ImageView
			android:id="@+id/account_avatar"
			style="@style/title_bar_user_avatar"
			android:src="@drawable/user_default_avatar_normal"
		/>
		<TextView
			android:id="@+id/account_name"
			style="@style/title_bar_text"
		/>
	</LinearLayout>
	
	<!-- 主栏，显示图标和进度条 -->
	<TableLayout
		style="@style/main"
	>
		<TableRow>
			<LinearLayout
				style="@style/main_layout_table_item"
			>
				<LinearLayout
					android:id="@+id/main_button_new_feed"
					android:background="@drawable/main_new_feed_button_background" 
					style="@style/main_layout_table_item_image"
					android:onClick="main_button_new_feed_click"
				/>
				<TextView
					android:text="@string/main_bn_new_feed"
					style="@style/main_layout_table_item_text"
				/>
			</LinearLayout>
			
			<LinearLayout
				style="@style/main_layout_table_item"
			>
				<LinearLayout 
					android:id="@+id/main_button_camera"
					android:background="@drawable/main_camera_button_background"
					style="@style/main_layout_table_item_image"
					android:onClick="main_button_camera_click"
				/>
				<TextView
					android:text="@string/main_bn_camera"
					style="@style/main_layout_table_item_text"
				/>
			</LinearLayout>
		</TableRow>
		
		<TableRow>
			<LinearLayout
				style="@style/main_layout_table_item"
			>
				<LinearLayout
					android:id="@+id/main_button_feeds"
					android:background="@drawable/main_feed_button_background"
					style="@style/main_layout_table_item_image"
					android:onClick="main_button_feeds_click"
				/>
				<TextView
					android:text="@string/main_bn_feeds"
					style="@style/main_layout_table_item_text"
				/>
			</LinearLayout>
			
			<LinearLayout
				style="@style/main_layout_table_item"
			>
				<LinearLayout
					android:id="@+id/main_button_collections"
					android:background="@drawable/main_collection_button_background" 
					style="@style/main_layout_table_item_image"
					android:onClick="main_button_collections_click"
				/>
				<TextView
					android:text="@string/main_bn_collections"
					style="@style/main_layout_table_item_text"
				/>
			</LinearLayout>
		</TableRow>
		
		<!-- 同步进度条和提示文字 -->
		<LinearLayout 
			android:layout_marginTop="40dp"
			android:orientation="vertical"
		>	
			<TextView 
				android:id="@+id/main_data_syn_text" 
				android:layout_height="wrap_content" 
				android:layout_width="fill_parent" 
				android:gravity="center"
				android:textSize="14dp"
				android:layout_marginBottom="8dp"
			/>
			
			<ProgressBar 
				android:id="@+id/main_data_syn_progress_bar" 
				style="?android:attr/progressBarStyleHorizontal"
				android:layout_height="14dp" 
				android:layout_width="fill_parent"
				android:visibility="gone"
			/>
			
		</LinearLayout>
		
	</TableLayout>
</LinearLayout>
